{
    "name": "InputControl",
    "maps": [
        {
            "name": "Moverse",
            "id": "e3fb22ed-c4f2-4277-8d97-5a68b7ee1394",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "40bd94f1-e23e-4c9e-9879-6d64511e80e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "9a4a2d05-743c-4475-bc83-271989fba83f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "12074c53-0142-4001-bb54-101fe44de81f",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33a53965-733e-4e94-864a-c9e17a833d86",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb4b7ff7-d886-4ad0-8447-b4a525ef9309",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camara",
            "id": "521a41ac-b6bb-4e30-8370-e6fed0ee745e",
            "actions": [
                {
                    "name": "MoverCamara",
                    "type": "Value",
                    "id": "c9ca11ae-7de7-49d0-9eb6-a2b7b3501bb5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3bed6083-50b0-410c-9558-c631e1b5324a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoverCamara",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}